@@ -18,15 +18,14 @@ package com.github.tomakehurst.wiremock.extension.responsetemplating;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import com.google.common.collect.ImmutableSet;
+import java.util.Set;
 import org.junit.jupiter.api.Test;
 
-class SystemKeyAuthorisorTest {
+public class SystemKeyAuthorisorTest {
 
   @Test
-  void permitsAllowedKeys() {
-    SystemKeyAuthoriser authoriser =
-        new SystemKeyAuthoriser(ImmutableSet.of("allowed_.*", "permitted_.*"));
+  public void permitsAllowedKeys() {
+    SystemKeyAuthoriser authoriser = new SystemKeyAuthoriser(Set.of("allowed_.*", "permitted_.*"));
 
     assertTrue(authoriser.isPermitted("allowed_key_1"));
     assertTrue(authoriser.isPermitted("ALLOWED_KEY_2"));
@@ -34,9 +33,8 @@ class SystemKeyAuthorisorTest {
   }
 
   @Test
-  void forbidsNonAllowedKeys() {
-    SystemKeyAuthoriser authoriser =
-        new SystemKeyAuthoriser(ImmutableSet.of("allowed_.*", "permitted_.*"));
+  public void forbidsNonAllowedKeys() {
+    SystemKeyAuthoriser authoriser = new SystemKeyAuthoriser(Set.of("allowed_.*", "permitted_.*"));
 
     assertFalse(authoriser.isPermitted("forbidden_key_1"));
     assertFalse(authoriser.isPermitted("notallowed_key_2"));
@@ -44,7 +42,7 @@ class SystemKeyAuthorisorTest {
   }
 
   @Test
-  void defaultsToWireMockPrefixIfNoPatternsSpecified() {
+  public void defaultsToWireMockPrefixIfNoPatternsSpecified() {
     SystemKeyAuthoriser authoriser = new SystemKeyAuthoriser(null);
 
     assertTrue(authoriser.isPermitted("wiremock_key_1"));
