@@ -21,13 +21,14 @@ import static org.hamcrest.Matchers.equalToCompressingWhiteSpace;
 import com.github.jknack.handlebars.Options;
 import com.github.tomakehurst.wiremock.common.ConsoleNotifier;
 import com.github.tomakehurst.wiremock.common.LocalNotifier;
-import com.google.common.collect.ImmutableMap;
+import java.io.IOException;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
+import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-class HostnameHelperTest {
+public class HostnameHelperTest {
 
   private HostnameHelper helper;
   private String hostname;
@@ -41,14 +42,14 @@ class HostnameHelperTest {
   }
 
   @Test
-  void generatesHostname() {
-    ImmutableMap<String, Object> optionsHash = ImmutableMap.of();
+  public void generatesHostname() throws Exception {
+    Map<String, Object> optionsHash = Map.of();
 
     String output = render(optionsHash);
     assertThat(output, equalToCompressingWhiteSpace(hostname));
   }
 
-  private String render(ImmutableMap<String, Object> optionsHash) {
+  private String render(Map<String, Object> optionsHash) throws IOException {
     return helper
         .apply(null, new Options.Builder(null, null, null, null, null).setHash(optionsHash).build())
         .toString();
