@@ -20,16 +20,16 @@ import static org.hamcrest.Matchers.*;
 
 import com.fasterxml.jackson.databind.util.ISO8601DateFormat;
 import com.github.jknack.handlebars.Options;
-import com.google.common.collect.ImmutableMap;
 import java.io.IOException;
 import java.text.DateFormat;
 import java.time.Instant;
 import java.time.format.DateTimeFormatter;
 import java.util.Date;
+import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-class ParseDateHelperTest {
+public class ParseDateHelperTest {
 
   private static final DateFormat df = new ISO8601DateFormat();
 
@@ -41,8 +41,8 @@ class ParseDateHelperTest {
   }
 
   @Test
-  void parsesAnISO8601DateWhenNoFormatSpecified() throws Exception {
-    ImmutableMap<String, Object> optionsHash = ImmutableMap.of();
+  public void parsesAnISO8601DateWhenNoFormatSpecified() throws Exception {
+    Map<String, Object> optionsHash = Map.of();
 
     String inputDate = "2018-05-01T01:02:03Z";
     Object output = render(inputDate, optionsHash);
@@ -53,8 +53,8 @@ class ParseDateHelperTest {
   }
 
   @Test
-  void parsesAnRFC1123DateWhenNoFormatSpecified() throws Exception {
-    ImmutableMap<String, Object> optionsHash = ImmutableMap.of();
+  public void parsesAnRFC1123DateWhenNoFormatSpecified() throws Exception {
+    Map<String, Object> optionsHash = Map.of();
 
     String inputDate = "Tue, 01 Jun 2021 15:16:17 GMT";
     Object output = render(inputDate, optionsHash);
@@ -66,8 +66,8 @@ class ParseDateHelperTest {
   }
 
   @Test
-  void parsesDateWithSuppliedFormat() throws Exception {
-    ImmutableMap<String, Object> optionsHash = ImmutableMap.of("format", "dd/MM/yyyy");
+  public void parsesDateWithSuppliedFormat() throws Exception {
+    Map<String, Object> optionsHash = Map.of("format", "dd/MM/yyyy");
 
     String inputDate = "01/02/2003";
     Object output = render(inputDate, optionsHash);
@@ -78,8 +78,8 @@ class ParseDateHelperTest {
   }
 
   @Test
-  void parsesLocalDateTimeWithSuppliedFormat() throws Exception {
-    ImmutableMap<String, Object> optionsHash = ImmutableMap.of("format", "dd/MM/yyyy HH:mm:ss");
+  public void parsesLocalDateTimeWithSuppliedFormat() throws Exception {
+    Map<String, Object> optionsHash = Map.of("format", "dd/MM/yyyy HH:mm:ss");
 
     String inputDate = "01/02/2003 05:06:07";
     Object output = render(inputDate, optionsHash);
@@ -90,8 +90,8 @@ class ParseDateHelperTest {
   }
 
   @Test
-  void parsesDateTimeWithEpochFormat() throws Exception {
-    ImmutableMap<String, Object> optionsHash = ImmutableMap.of("format", "epoch");
+  public void parsesDateTimeWithEpochFormat() throws Exception {
+    Map<String, Object> optionsHash = Map.of("format", "epoch");
 
     String inputDate = "1577964091000";
     Object output = render(inputDate, optionsHash);
@@ -101,8 +101,7 @@ class ParseDateHelperTest {
     assertThat(((Date) output), is((expectedDate)));
   }
 
-  private Object render(String context, ImmutableMap<String, Object> optionsHash)
-      throws IOException {
+  private Object render(String context, Map<String, Object> optionsHash) throws IOException {
     return helper.apply(
         context, new Options.Builder(null, null, null, null, null).setHash(optionsHash).build());
   }
