@@ -21,27 +21,25 @@ import com.github.jknack.handlebars.Options;
 import com.github.tomakehurst.wiremock.common.ConsoleNotifier;
 import com.github.tomakehurst.wiremock.common.LocalNotifier;
 import com.github.tomakehurst.wiremock.extension.responsetemplating.SystemKeyAuthoriser;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
+import java.io.IOException;
+import java.util.Map;
+import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-class SystemValueHelperTest {
+public class SystemValueHelperTest {
 
   private SystemValueHelper helper;
 
   @BeforeEach
   public void init() {
-    helper = new SystemValueHelper(new SystemKeyAuthoriser(ImmutableSet.of(".*")));
+    helper = new SystemValueHelper(new SystemKeyAuthoriser(Set.of(".*")));
     LocalNotifier.set(new ConsoleNotifier(true));
   }
 
   @Test
-  void getExistingEnvironmentVariableShouldNotNull() {
-    ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.of(
-            "key", "PATH",
-            "type", "ENVIRONMENT");
+  public void getExistingEnvironmentVariableShouldNotNull() throws Exception {
+    Map<String, Object> optionsHash = Map.of("key", "PATH", "type", "ENVIRONMENT");
 
     String output = render(optionsHash);
     assertNotNull(output);
@@ -49,74 +47,56 @@ class SystemValueHelperTest {
   }
 
   @Test
-  void getNonExistingEnvironmentVariableShouldNull() {
-    ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.of(
-            "key", "NON_EXISTING_VAR",
-            "type", "ENVIRONMENT");
+  public void getNonExistingEnvironmentVariableShouldNull() throws Exception {
+    Map<String, Object> optionsHash = Map.of("key", "NON_EXISTING_VAR", "type", "ENVIRONMENT");
 
     String output = render(optionsHash);
     assertNull(output);
   }
 
   @Test
-  void getForbiddenEnvironmentVariableShouldReturnError() {
-    helper = new SystemValueHelper(new SystemKeyAuthoriser(ImmutableSet.of("JAVA*")));
+  public void getForbiddenEnvironmentVariableShouldReturnError() throws Exception {
+    helper = new SystemValueHelper(new SystemKeyAuthoriser(Set.of("JAVA*")));
 
-    ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.of(
-            "key", "TEST_VAR",
-            "type", "ENVIRONMENT");
+    Map<String, Object> optionsHash = Map.of("key", "TEST_VAR", "type", "ENVIRONMENT");
     String value = render(optionsHash);
     assertEquals("[ERROR: Access to TEST_VAR is denied]", value);
   }
 
   @Test
-  void getEmptyKeyShouldReturnError() {
-    ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.of(
-            "key", "",
-            "type", "PROPERTY");
+  public void getEmptyKeyShouldReturnError() throws Exception {
+    Map<String, Object> optionsHash = Map.of("key", "", "type", "PROPERTY");
     String value = render(optionsHash);
     assertEquals("[ERROR: The key cannot be empty]", value);
   }
 
   @Test
-  void getAllowedPropertyShouldSuccess() {
-    helper = new SystemValueHelper(new SystemKeyAuthoriser(ImmutableSet.of("test.*")));
+  public void getAllowedPropertyShouldSuccess() throws Exception {
+    helper = new SystemValueHelper(new SystemKeyAuthoriser(Set.of("test.*")));
     System.setProperty("test.key", "aaa");
     assertEquals("aaa", System.getProperty("test.key"));
-    ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.of(
-            "key", "test.key",
-            "type", "PROPERTY");
+    Map<String, Object> optionsHash = Map.of("key", "test.key", "type", "PROPERTY");
     String value = render(optionsHash);
     assertEquals("aaa", value);
   }
 
   @Test
-  void getForbiddenPropertyShouldReturnError() {
-    helper = new SystemValueHelper(new SystemKeyAuthoriser(ImmutableSet.of("JAVA.*")));
+  public void getForbiddenPropertyShouldReturnError() throws Exception {
+    helper = new SystemValueHelper(new SystemKeyAuthoriser(Set.of("JAVA.*")));
     System.setProperty("test.key", "aaa");
-    ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.of(
-            "key", "test.key",
-            "type", "PROPERTY");
+    Map<String, Object> optionsHash = Map.of("key", "test.key", "type", "PROPERTY");
     String value = render(optionsHash);
     assertEquals("[ERROR: Access to test.key is denied]", value);
   }
 
   @Test
-  void getNonExistingSystemPropertyShouldNull() {
-    ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.of(
-            "key", "not.existing.prop",
-            "type", "PROPERTY");
+  public void getNonExistingSystemPropertyShouldNull() throws Exception {
+    Map<String, Object> optionsHash = Map.of("key", "not.existing.prop", "type", "PROPERTY");
     String output = render(optionsHash);
     assertNull(output);
   }
 
-  private String render(ImmutableMap<String, Object> optionsHash) {
+  private String render(Map<String, Object> optionsHash) throws IOException {
     return helper.apply(
         null, new Options.Builder(null, null, null, null, null).setHash(optionsHash).build());
   }
