@@ -30,7 +30,7 @@ import com.github.tomakehurst.wiremock.extension.Parameters;
 import com.github.tomakehurst.wiremock.http.Fault;
 import com.github.tomakehurst.wiremock.http.HttpHeaders;
 import com.github.tomakehurst.wiremock.http.ResponseDefinition;
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.skyscreamer.jsonassert.JSONAssert;
 
@@ -54,7 +54,7 @@ class ResponseDefinitionTest {
             "http://base.com",
             null,
             Fault.EMPTY_RESPONSE,
-            ImmutableList.of("transformer-1"),
+            List.of("transformer-1"),
             Parameters.one("name", "Jeff"),
             true);
 
